# conlang

./: .gitignore  CHANGELOG.md  Main.hs  conlang.cabal
app/: Change.hs  Evolve.hs  Generate.hs  Main.hs  Quote.hs  SoundChange.hs  TH.hs
app/Kalvaszti/: Dictionary.hs  Evolve.hs  Generate.hs
app/Language/: Change.hs
app/Language/Change/: Quote.hs
latex/: commands.tex
latex/hom/: hom.tex  hom.toc
latex/kalvaszti/: kalvaszti.tex
