cabal-version:      2.4
name:               conlang
version:            0.1.0.0

author:             UnaryPlus
maintainer:         ombspring@gmail.com

executable conlang
    main-is:          Main.hs
    other-modules:    Kalvaszti.Generate, 
                      Kalvaszti.Evolve, 
                      Kalvaszti.Dictionary,

    build-depends:    base ^>=4.14.1.0,
                      containers,
                      mtl,
                      MonadRandom,
                      sound-change

    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options:      -W
